force-app/main/default/objects/Unit__c/fields/Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time__c</fullName>
    <formula>TEXT(Time__c) + &quot; Mins&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Time</label>
    <type>Text</type>
</CustomField>