force-app/main/default/objects/Unit__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>